Solved vertical alignment problem in phones

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -121,15 +121,6 @@ a.brand
 	overflow: auto;
 }
 
-@media screen and (min-width: 768px){
-	.vertical-center {
-  		display: inline-block;
-  		height:100%;
-  		width:100%;
-  		text-align: center;  /* align the inline(-block) elements horizontally */
-	}
-}
-
 .bar{
 	background: transparent;
     border: none;
@@ -194,18 +185,25 @@ a.brand
 	-ms-filter: sepia(0);
 }
 
-.vertical-center:before {    /* create a full-height inline block pseudo=element */
-  content: " ";
-  display: inline-block;
-  vertical-align: middle;  /* vertical alignment of the inline element */
-  height: 100%;
+@media (min-width: 768px){
+	.vertical-center {
+  		height:100%;
+  		width:100%;
+  		text-align: center;  /* align the inline(-block) elements horizontally */
+	}
+	.vertical-center:before {    /* create a full-height inline block pseudo=element */
+	  content: " ";
+	  display: inline-block;
+	  vertical-align: middle;  /* vertical alignment of the inline element */
+	  height: 100%;
 }
 
-.vertical-center > .container {
-  max-width: 100%;
-  display: inline-block;
-  vertical-align: middle;
+	.vertical-center > .container {
+	  max-width: 100%;
+	  display: inline-block;
+	  vertical-align: middle;
   }
+}
 
   .responsive {
     max-width:100% !important;
